--- a/css/about_us.css
+++ b/css/about_us.css
@@ -5,27 +5,30 @@
     padding-left: 5%;
     padding-right: 5%;
     display: flex;
-    flex-direction: column;
+
     align-items: space-around;
 }
+
 article{
     display: flex;
     width: 100%;
     margin-top: 5%;
 }
 .about_us_image{
-    background-image: url(../img/services.jpg);
+    background-image: url(../img/about_us_1.jpg);
     width: 100%;
-    height: 45vh;
+    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-right: 5%;
+    margin-right: 5%; 
+    margin-top: 5%;
 }
 .description__about_us{
     display: flex;
     width: 100%;
     flex-direction: column;
-    line-height: 4vh;
+    line-height: 5vh;
+    font-size: 19pt;
 }
 .blue-line__about_us{
     display: flex;
@@ -45,16 +48,90 @@ margin-top: 3%;
 border-radius: 5px;
 color: white;
 }
-.image_lenght{
-    margin-left: 5%;
-    margin-right: 0%;
-    background-image: url(../img/services2.jpg);
-}
+
+
 .grey{
     background-color: #f2f2f2;
     padding: 3%;
 }
-@media screen and (max-width: 640px) {
+
+.images__about{
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    width: 50vw;
+}
+.about_us_image{
+    width: 40vw;
+
+}
+.indent{
+    text-indent: 5ch;
+    text-align: justify;
+}
+
+@media (max-width: 1300px) and (min-width: 1100px) {
+    .indent{
+        font-size: 20px;
+    }
+    .images__about{
+        width: 42%;
+    }
+    .descriprion__name{
+        font-size: 25px;
+    }
+
+} 
+@media (max-width: 1100px) and (min-width: 900px) {
+    .indent{
+        font-size: 17px;
+    }
+    .descriprion__name{
+        font-size: 22px;
+    }
+
+} 
+@media (max-width: 950px) and (min-width: 800px) {
+    .indent{
+        font-size: 15px;
+    }
+
+    .descriprion__name{
+        font-size: 19px;
+    }
+    .description__about_us{
+        line-height: 4vh;
+        
+    }
+  }
+  @media (max-width: 800px) and (min-width: 700px) {
+    .indent{
+        font-size: 14.5px;
+    }
+
+    .descriprion__name{
+        font-size: 17px;
+    }
+    .description__about_us{
+        line-height: 3vh;
+        
+    }
+  }
+  @media (max-width: 700px) and (min-width: 600px) {
+    .indent{
+        font-size: 12px;
+    }
+
+    .descriprion__name{
+        font-size: 16px;
+    }
+    .description__about_us{
+        line-height: 2.5vh;
+        
+    }
+  }
+  /*
+  @media screen and (max-width: 640px) {
     .about_us__container > article{
         flex-direction: column;
     }
@@ -66,4 +143,10 @@ color: white;
         margin-top: 2%;
         margin-left: 0%;
     }
+    .about_us_image{
+        width: 100%;
+        height: 60vh;
+        
+    }
 }
+*/
