--- a/css/contacts.css
+++ b/css/contacts.css
@@ -182,7 +182,7 @@ form>* {
 ::placeholder {
     font-size: 2vh;
     font-family: 'Oswald', sans-serif;
-    color: rgb(112, 112, 112);
+    color: #73beff;
 }
 
 .send>button {
@@ -283,6 +283,9 @@ form>* {
     color: #bb5e5e;
     font-size: 25px;
 }
+footer{
+    margin-top: 0%;
+}
 @media screen and (max-width: 640px) {
     .container__contacts{
         flex-direction: column;
@@ -340,6 +343,14 @@ width: 42vw;
         padding-right: 60%;
     }
 
+}
+@media (max-width: 600px) and (min-width: 500px) {
+    .send{
+        padding-right: 80%;
+    }
+    .feedback__h3{
+        font-size:10.5px;
+    }
 }
 @media (max-width: 1000px) and (min-width: 800px) {
     .tx_cn{
