--- a/css/style.css
+++ b/css/style.css
@@ -762,7 +762,7 @@ padding-top: 22.7%;
 }
 
 
-@media (max-width: 1100px) and (min-width: 600px) {
+@media (max-width: 1100px) and (min-width: 560px) {
 
         header section span{
             padding:0 0.5rem;
@@ -1339,7 +1339,7 @@ padding-top: 22%;
     header section{
         font-size: 7.8px;
     }
-    input{
+    #question{
         width: 12vw;
     }
 .topnav a{
@@ -1418,17 +1418,28 @@ font-size: 65%;
 padding-bottom: 1%;
 padding-top: 24%;
     }
+    .behind_block__article {
+        height: 7vh;
+     }
     .main_logo_parallax{
         width: 40%;
         padding-top: 3%;
         padding-bottom: 1%;
     }
+    .parallax__first-blur{
+        
+        border-radius: 13px;
+    }
     header section{
         font-size: 5px;
     }
     header section{
-        font-size: 6.4px;
+        font-size: 7.2px;
+        padding: 0 0rem;
     }
+    header section span {
+    padding: 0 0.3rem;
+}
     .search{
         width: 12vw;
     }
@@ -1443,8 +1454,9 @@ font-size: 9.5px;
     padding-top: 0;
     padding-bottom: 0%;
 }
-input{
+#question{
     margin: 0;
+    width: 12vw;
 }
 
 .parallax__first-blur p {
@@ -1514,6 +1526,121 @@ font-size: 55%;
 }
 }
 
+@media (max-width: 600px) and (min-width: 500px) {
+    .paralax,
+    .overlay {
+padding-bottom: 1%;
+padding-top: 21%;
+    }
+    .parallax__first-blur{
+        width: 30%;
+        border-radius: 10px;
+    }
+    .main_logo_parallax{
+        width: 40%;
+        padding-top: 3%;
+        padding-bottom: 1%;
+    }
+
+    header section{
+        font-size: 6px;
+        padding: 0 0rem;
+    }
+    header section span {
+    padding: 0 0.2rem;
+}
+    .search{
+        width: 12vw;
+    }
+.topnav a{
+font-size: 9px;
+}
+#logo{
+    width: 20%;
+}
+
+.topnav{
+    padding-top: 0;
+    padding-bottom: 0%;
+}
+#question{
+    margin: 0;
+    width: 12vw;
+}
+
+.parallax__first-blur p {
+margin-bottom: 4%;
+font-size: 10px;
+}
+.h1_main, .h3_main{
+text-align: justify;
+}
+.parallax__first-blur h1 {
+
+margin-bottom: 4%;
+font-size: 45px;
+}
+
+.parallax__first-blur h3 {
+margin-bottom: 1%;
+font-size: 7px;
+font-family: 'Roboto Condensed', sans-serif;
+}
+
+.parallax__first-blur p {
+margin-bottom: 2%;
+font-size: 20px;
+}
+.scroll_img{
+width: 6%;
+}
+#navbar a{
+font-size: 50%;
+}
+#navbar > a {
+    margin: 7px
+}
+
+.h1__services {
+    margin-bottom: 7%;
+    font-size: 12pt;
+}
+.h1__pluses {
+    margin-bottom: 7%;
+    font-size: 11pt;
+}
+.h1__square_2{
+    font-size: 20px;
+}
+.h1__square{
+    font-size: 25px;
+}
+.h3__square{
+    font-size: 15px;
+}
+.p__pluses {
+    font-size: 9.7pt;
+    line-height: 100%;
+}
+.p__services {
+    font-size: 9pt;
+    line-height: 100%;
+}
+.a__pluses, .a__services{
+    font-size: 10px;
+}
+#logo2{
+    width: 80px;
+    padding-left: 10px;
+}
+.article__container_one{
+    width: 100%;
+}
+.behind_block__article {
+   height: 7vh;
+}
+}
+
 
  
 @media (max-width: 850px) and (min-width: 800px) {
@@ -1526,7 +1653,7 @@ font-size: 55%;
 }
 @media (max-width: 670px) and (min-width: 600px) {
     .p__pluses, .p__services {
-        font-size: 9pt;
+        font-size: 10.5pt;
     }
     .h1__pluses, .h1__services {
         margin-bottom: 7%;
@@ -1568,13 +1695,13 @@ font-size: 55%;
         font-size: 8px;
     }
 }
-@media (max-width: 700px) and (min-width: 600px) {
+@media (max-width: 700px) and (min-width: 500px) {
     .contacts__footer, .nav__footer{
         font-size: 6px;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 460px) {
     #logo{
     float:left;
     width:90%;
