--- a/css/contacts.css
+++ b/css/contacts.css
@@ -352,6 +352,14 @@ width: 42vw;
         font-size:10.5px;
     }
 }
+@media (max-width: 500px) and (min-width: 460px) {
+    .send{
+        padding-right: 80%;
+    }
+    .feedback__h3{
+        font-size:10px;
+    }
+}
 @media (max-width: 1000px) and (min-width: 800px) {
     .tx_cn{
         font-size: 16px;
