--- a/css/style.css
+++ b/css/style.css
@@ -1566,6 +1566,7 @@ font-size: 9px;
 #question{
     margin: 0;
     width: 12vw;
+    height: 2vh;
 }
 
 .parallax__first-blur p {
@@ -1640,6 +1641,123 @@ font-size: 50%;
    height: 7vh;
 }
 }
+@media (max-width: 500px) and (min-width: 460px) {
+    .paralax,
+    .overlay {
+padding-bottom: 1%;
+padding-top: 20%;
+    }
+    .parallax__first-blur{
+        width: 32%;
+        border-radius: 10px;
+    }
+    .main_logo_parallax{
+        width: 40%;
+        padding-top: 3%;
+        padding-bottom: 1%;
+    }
+
+    header section{
+        font-size: 5.2px;
+        padding: 0 0rem;
+    }
+    header section span {
+    padding: 0 0.2rem;
+}
+    .search{
+        width: 12vw;
+    }
+.topnav a{
+font-size: 8px;
+}
+#logo{
+    width: 20%;
+}
+
+.topnav{
+    padding-top: 0;
+    padding-bottom: 0%;
+}
+#question{
+    margin: 0;
+    width: 12vw;
+    padding: 0;
+    height: 2vh;
+}
+
+
+.parallax__first-blur p {
+margin-bottom: 4%;
+font-size: 10px;
+}
+.h1_main, .h3_main{
+text-align: justify;
+}
+.parallax__first-blur h1 {
+
+margin-bottom: 4%;
+font-size: 45px;
+}
+
+.parallax__first-blur h3 {
+margin-bottom: 1%;
+font-size: 7px;
+font-family: 'Roboto Condensed', sans-serif;
+}
+
+.parallax__first-blur p {
+margin-bottom: 2%;
+font-size: 20px;
+}
+.scroll_img{
+width: 6%;
+}
+#navbar a{
+font-size: 45%;
+}
+#navbar > a {
+    margin: 6px
+}
+
+.h1__services {
+    margin-bottom: 7%;
+    font-size: 11pt;
+}
+.h1__pluses {
+    margin-bottom: 7%;
+    font-size: 10pt;
+}
+.h1__square_2{
+    font-size: 18px;
+}
+.h1__square{
+    font-size: 22px;
+}
+.h3__square{
+    font-size: 15px;
+}
+.p__pluses {
+    font-size: 8.5pt;
+    line-height: 100%;
+}
+.p__services {
+    font-size: 8pt;
+    line-height: 100%;
+}
+.a__pluses, .a__services{
+    font-size: 10px;
+}
+#logo2{
+    width: 80px;
+    padding-left: 10px;
+}
+.article__container_one{
+    width: 100%;
+}
+.behind_block__article {
+   height: 7vh;
+}
+}
 
 
  
@@ -1695,7 +1813,7 @@ font-size: 50%;
         font-size: 8px;
     }
 }
-@media (max-width: 700px) and (min-width: 500px) {
+@media (max-width: 700px) and (min-width: 460px) {
     .contacts__footer, .nav__footer{
         font-size: 6px;
     }
@@ -2185,4 +2303,5 @@ font-size: 55%;
 .contacts__footer, .nav__footer{
     font-size: 13px;
 }
+
 }
