--- a/css/products.css
+++ b/css/products.css
@@ -234,6 +234,9 @@ align-self: center;
 justify-content: center;
 padding-top: 1%;
 }
+.products_none{
+  display: none;
+}
 @media screen and (max-width: 640px) {
 .products__block{
     flex-direction: column;
@@ -259,4 +262,22 @@ flex-direction: column;
 .button{
 width: 100%;
 }
+}
+@media screen and (max-width: 460px) {
+    .products__block{
+      display: flex;
+      flex-direction: column;
+    }
+    .products_none{
+      display: flex;
+    }
+    .products_none_mobile{
+      display: none;
+    }
+    #main-header{
+      margin-top: -10px;
+    }
+    .block__article_2, .block__article_3{
+      margin-bottom: 10px;
+    }
 }
