--- a/css/contacts.css
+++ b/css/contacts.css
@@ -31,7 +31,7 @@
 
 .container__content-contact {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
 }
 
