--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ padding-top: 22.7%;
     }
     .article__container_three > img{
         border-radius: 10px;
-        width: 35vw;
+        width: 100%;
     }
     .article__container_fourth{
         text-align: right;
