--- a/css/products.css
+++ b/css/products.css
@@ -283,9 +283,7 @@ width: 100%;
   width: 90%;
   padding-right: 0%;
   }
-  .list_products {
-    width: 80%;
-}
+
 }
 @media screen and (max-width: 460px) {
     .products__block{
@@ -301,7 +299,10 @@ width: 100%;
     #main-header{
       margin-top: -10px;
     }
-    .block__article_2, .block__article_3{
-      margin-bottom: 10px;
+    .block__article_2, .block__article_3, .block__article_1, .block__article_4{
+      margin-bottom: 20px;
+    }
+    .left_side_product{
+      margin-right: 10px;
     }
 }
