--- a/css/style.css
+++ b/css/style.css
@@ -2086,6 +2086,7 @@ font-size: 45%;
         background-size: 100%;
         background-repeat: no-repeat;
         background-position: top;
+        
     }
 
     
@@ -2103,11 +2104,28 @@ font-size: 45%;
         display: -ms-flexbox;
         display: flex;
     }
-    .section_mobile_3{
+    .section_mobile_3 {
         display: flex;
+        margin-bottom: 5.7px;
         flex-direction: column;
     }
-
+    .logo_phone {
+        width: 9%;
+        margin: 0;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+    .fa-lock:before {
+        content: "\f023";
+        margin-right: 5px;
+        margin-top: 10px;
+    }
+    .make_purchase{
+        margin-top: 1px;
+    }
+    .kyivstar{
+        margin-left: 11px;
+    }
     .numbers{
         display: -webkit-box;
         display: -ms-flexbox;
@@ -2222,6 +2240,7 @@ font-size: 45%;
         width: 100%;
         z-index: 999; /* puts itself on top of all other elements on the page */
         padding: 5px 0;
+        box-shadow: 1px 1px 10px 1px grey;
     }
     
     /* LOGO - the h1 */
@@ -2265,6 +2284,7 @@ font-size: 45%;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
+                margin-top: 5px;
     }
     
     .nav-toggle-label span,
@@ -2493,7 +2513,7 @@ header section span{
     padding: 0rem ;
 }
 .parallax__first-blur{
-    width: 45%;
+    width: 55%;
  }
  .services{
     -webkit-box-orient: vertical;
@@ -2520,7 +2540,7 @@ header section span{
  }
  .article__container_three > img {
 
-    margin-top: 40%;
+    margin-top: 10%;
 }
  .parallax__first-blur_mobile{
     z-index: 1;
@@ -2528,7 +2548,7 @@ header section span{
     display: -ms-flexbox;
     display: flex;
     width: 80%;
-    position: absolute;
+    
     padding-left: 2%;
     padding-right: 2%;
     background-size: cover;
@@ -2581,7 +2601,7 @@ header section span{
  }
  .parallax {
     background-image: url(../img/baner_plane_mobile.jpg);
-    padding-top: 122.5%;
+    padding-top: 97%;
     
 }
 .menu_hr{
@@ -2596,6 +2616,16 @@ header section span{
 .ukr_lang, .eng_lang{
     display: -webkit-inline-box;
 }
+.flag{
+    margin-left: 5px;
+}
+.eng_flag{
+    margin-left: 6.5px;
+}
+.flags{
+    margin-bottom: 5px;
+}
+
 }
 @media (max-width: 460px) and (min-width: 410px) {
     .menu_hr{
@@ -2603,6 +2633,7 @@ header section span{
     }
     #main-header{
         padding-top: 3%;
+        
     }
     .logo_mobile_plane {
         margin-top: 5px;
@@ -2619,6 +2650,86 @@ header section span{
     .logo_mobile_plane {
         margin-top: 10px;
     }
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 95%;
+        
+    }
+}
+@media (max-width: 360px) and (min-width: 310px) {
+    .menu_hr{
+        height: 3px;
+    }
+    #main-header{
+        padding-top: 0%;
+        margin-bottom: 55px;
+    }
+    .logo_mobile_plane {
+        margin-top: 10px;
+    }
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 83%;
+        
+    }
+    header section {
+        font-size: 8px;
+        
+    }
+}
+@media (max-width: 310px) and (min-width: 260px) {
+    .menu_hr{
+        display: none;
+    }
+    #main-header{
+        padding-top: 0%;
+        margin-bottom: 50px;
+    }
+
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 85%;
+        
+    }
+    header section {
+        font-size: 6px;
+        
+    }
+    .parallax__first-blur {
+        width: 60%;
+    }
+}
+@media (max-width: 360px) and (min-width: 330px) {
+
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 89%;
+        
+    }
+}
+@media (max-width: 300px) and (min-width: 260px) {
+
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 82%;
+        
+    }
+}
+@media (max-width: 290px) and (min-width: 260px) {
+
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 80%;
+        
+    }
+}
+@media (max-width: 280px) and (min-width: 260px) {
+
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 75%;
+        
+    }
 }
 @media (max-width: 430px) and (min-width: 410px) {
     .menu_hr{
@@ -2628,5 +2739,11 @@ header section span{
 @media (max-width: 390px) and (min-width: 360px) {
     .menu_hr{
         height: 2px;
+        
+    }
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 92%;
+        
     }
 }
