--- a/css/products.css
+++ b/css/products.css
@@ -154,7 +154,8 @@ margin-bottom: 2%;
 
 .wrapper{
 width: 50%;
-padding-right: 5%;
+padding-right: 2%;
+padding-left: 2%;
 justify-content: space-between;
 align-items: center;
 display: flex;
@@ -280,7 +281,7 @@ flex-direction: column;
 width: 100%;
 }
 .wrapper{
-  width: 90%;
+  width: 70%;
   padding-right: 0%;
   }
 
