--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,7 @@ padding-top: 22.7%;
     }
     
     .parallax {
-        background-image: url(../img/banner_final2.jpg);
+        background-image: url(../img/banner_final.jpg);
         background-size: 100%;
         background-repeat: no-repeat;
         width: 100%;
@@ -862,7 +862,9 @@ padding-top: 22.7%;
     /*media queries*/
 
 
-        
+    .none_parallax{
+        display: none;
+    }
         @media (max-width: 3000px) and (min-width: 1600px) {
 
          
@@ -1756,6 +1758,7 @@ font-size: 55%;
 padding-bottom: 1%;
 padding-top: 21%;
     }
+    
     .parallax__first-blur{
         width: 30%;
         border-radius: 10px;
@@ -1838,7 +1841,7 @@ font-size: 50%;
     font-size: 20px;
 }
 .h1__square{
-    font-size: 25px;
+    font-size: 18px;
 }
 .h3__square{
     font-size: 15px;
@@ -1955,7 +1958,7 @@ font-size: 45%;
     font-size: 18px;
 }
 .h1__square{
-    font-size: 22px;
+    font-size: 17px;
 }
 .h3__square{
     font-size: 15px;
@@ -2051,6 +2054,12 @@ font-size: 45%;
         align-items: center;
         justify-content: center;
     }
+    .schedule_none > span, .schedule_none{
+        display: none;
+    }
+    .mobile_none{
+        display: none;
+    }
     .logo_plane_article{
         display: flex;
     }
@@ -2103,11 +2112,13 @@ font-size: 45%;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
+        margin-top: 3px;
     }
     .section_mobile_3 {
         display: flex;
-        margin-bottom: 5.7px;
+        margin-bottom: 2px;
         flex-direction: column;
+        
     }
     .logo_phone {
         width: 9%;
@@ -2221,11 +2232,9 @@ font-size: 45%;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
-        margin-top: 2%;
+    
     }
-    .logo_second{
-        margin-top: 3%;
-    }
+    
     .head{
         margin-top: 50px;
     }
@@ -2625,7 +2634,12 @@ header section span{
 .flags{
     margin-bottom: 5px;
 }
-
+.section_mobile_1, .section_mobile_2, .section_mobile_3 {
+    margin-left: 10px;
+}
+.none_parallax{
+    display: flex;
+}
 }
 @media (max-width: 460px) and (min-width: 410px) {
     .menu_hr{
@@ -2638,6 +2652,21 @@ header section span{
     .logo_mobile_plane {
         margin-top: 5px;
     }
+    .cont_text_header2{
+        font-size: 25px;
+        margin-top: 100px;
+    }
+    header section {
+        font-size: 10px;
+        padding: 0.1rem 0rem;
+    }
+    .parallax__first-blur h3 {
+        font-size: 12px;
+        }
+        .parallax {
+            padding-top: 96%;
+            
+        }
 }
 @media (max-width: 410px) and (min-width: 360px) {
     .menu_hr{
@@ -2651,29 +2680,27 @@ header section span{
         margin-top: 10px;
     }
     .parallax {
-        background-image: url(../img/baner_plane_mobile.jpg);
         padding-top: 95%;
         
     }
 }
 @media (max-width: 360px) and (min-width: 310px) {
     .menu_hr{
-        height: 3px;
+        height: 0px;
     }
     #main-header{
         padding-top: 0%;
-        margin-bottom: 55px;
+        margin-bottom: 47px;
     }
     .logo_mobile_plane {
         margin-top: 10px;
     }
     .parallax {
-        background-image: url(../img/baner_plane_mobile.jpg);
         padding-top: 83%;
         
     }
     header section {
-        font-size: 8px;
+        font-size: 7.5px;
         
     }
 }
@@ -2687,7 +2714,6 @@ header section span{
     }
 
     .parallax {
-        background-image: url(../img/baner_plane_mobile.jpg);
         padding-top: 85%;
         
     }
@@ -2722,6 +2748,17 @@ header section span{
         padding-top: 80%;
         
     }
+    #main-header{
+        padding-top: 0%;
+        margin-bottom: 42px;
+    }
+    .cont_text_header2 {
+        font-size: 15px;
+    }
+    .nav-toggle-label {
+        margin-top: 2.5px;
+    }
+
 }
 @media (max-width: 280px) and (min-width: 260px) {
 
@@ -2729,11 +2766,17 @@ header section span{
         background-image: url(../img/baner_plane_mobile.jpg);
         padding-top: 75%;
         
+    }.section_mobile_1, .section_mobile_2, .section_mobile_3 {
+        margin-left: 0px;
     }
 }
 @media (max-width: 430px) and (min-width: 410px) {
     .menu_hr{
         height: 10px;
+    }
+    .parallax {
+        padding-top: 92%;
+        
     }
 }
 @media (max-width: 390px) and (min-width: 360px) {
@@ -2743,7 +2786,18 @@ header section span{
     }
     .parallax {
         background-image: url(../img/baner_plane_mobile.jpg);
-        padding-top: 92%;
+        padding-top: 95%;
+        
+    }
+}
+@media (max-width: 360px) and (min-width: 350px) {
+    .menu_hr{
+        height: 2px;
+        
+    }
+    .parallax {
+        background-image: url(../img/baner_plane_mobile.jpg);
+        padding-top: 93%;
         
     }
 }
