--- a/css/contacts.css
+++ b/css/contacts.css
@@ -391,9 +391,10 @@ width: 42vw;
     }
     #main-header{
         margin-top: -5px;
+        padding-top: 1% !important;
     }
     .feedback__h3{
-        font-size: 15px;
+        font-size: 9px;
      }
      form{
     width: 100%;
@@ -410,4 +411,54 @@ width: 42vw;
         margin-right: 7%;
         height: 5vh;
     }
+    .send>button {
+        font-size: 2vh;
+    }
+    .logo__form-h2 {
+        margin-left: 2vh;
+    }
+    .contacts__white-line {
+        margin-left: 2vh;
+
+    }
   }
+  @media (max-width: 430px) and (min-width: 360px) {
+
+    .feedback__h3{
+        font-size: 8px;
+     }
+}
+@media (max-width: 360px) and (min-width: 300px) {
+
+    .feedback__h3{
+        font-size: 7px;
+     }
+     .send>button {
+        font-size: 2vh;
+    }
+    .logo__form-h2 {
+        margin-left: 2vh;
+    }
+    .contacts__white-line {
+        margin-left: 2vh;
+
+    }
+    #main-header{
+        padding-top: 0%;
+        margin-bottom: 50px;
+    }
+}
+@media (max-width: 300px) and (min-width: 260px) {
+
+    .feedback__h3{
+        font-size: 5.5px;
+     }
+
+}
+@media (max-width: 310px) and (min-width: 260px) {
+
+    #main-header{
+        
+        margin-top: -58px;
+    }
+}
