--- a/css/contacts.css
+++ b/css/contacts.css
@@ -158,6 +158,7 @@ form>* {
     grid-row: 1/5;
     border: 1px solid #A19797;
     border-radius: 10px;
+    max-height: 320px;
 }
 
 .send {
@@ -192,6 +193,7 @@ form>* {
     font-family: 'Oswald', sans-serif;
     border: none;
     align-self: center;
+    max-height: 100px;
     display: flex;
 }
 
