--- a/css/about_us.css
+++ b/css/about_us.css
@@ -18,7 +18,8 @@ article{
 
     width: 100%;
     height: 100%;
-    object-fit: cover;
+
+    background-size: cover;
     background-repeat: no-repeat;
     margin-right: 5%; 
     margin-top: 5%;
