--- a/css/about_us.css
+++ b/css/about_us.css
@@ -68,7 +68,7 @@ color: white;
 
 }
 .indent{
-    text-indent: 5ch;
+    
     text-align: justify;
 }
 .none_dekstop{
@@ -122,6 +122,19 @@ color: white;
     }
     .description__about_us{
         line-height: 3vh;
+        
+    }
+  }
+  @media (max-width: 700px) and (min-width: 600px) {
+    .indent{
+        font-size: 12px;
+    }
+
+    .descriprion__name{
+        font-size: 16px;
+    }
+    .description__about_us{
+        line-height: 2.5vh;
         
     }
   }
