--- a/css/products.css
+++ b/css/products.css
@@ -255,7 +255,7 @@ padding-top: 1%;
   
 
 }
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 800px) {
 .products__block{
     flex-direction: column;
     display: flex;
@@ -281,12 +281,18 @@ flex-direction: column;
 width: 100%;
 }
 .wrapper{
-  width: 70%;
-  padding-right: 0%;
+  width: 100%;
+  justify-content: center;
+  padding-right: 2%;
   }
 
 }
 @media screen and (max-width: 460px) {
+  .wrapper{
+    width: 75%;
+    justify-content: center;
+    padding-right: 0%;
+    }
     .products__block{
       display: flex;
       flex-direction: column;
