--- a/css/style.css
+++ b/css/style.css
@@ -600,6 +600,7 @@ padding-top: 22.7%;
         margin-bottom: 7%;
         line-height: 200%;
         text-align: justify;
+        text-indent: 35px;
     }
     .a__pluses, .a__services{
         color: black;
