--- a/css/products.css
+++ b/css/products.css
@@ -160,6 +160,7 @@ justify-content: space-between;
 align-items: center;
 display: flex;
 align-self: center;
+margin-bottom: 20px;
 }
 .image_product{
 width: 100%;
@@ -242,6 +243,23 @@ padding-top: 1%;
 .uk-slideshow [class*=uk-position-bottom] {
     position: relative!important;
 }
+@media (max-width: 1100px) and (min-width: 1000px) {
+.wrapper{
+  width: 40%;
+}
+}
+@media (max-width: 1000px) and (min-width: 900px) {
+  .wrapper{
+    width: 40%;
+  }
+  
+}
+@media (max-width: 900px) and (min-width: 800px) {
+  .wrapper{
+    width: 40%;
+  }
+  
+}
 @media (max-width: 1000px) and (min-width: 800px) {
   .tx_cn{
       font-size: 14px;
@@ -281,7 +299,7 @@ flex-direction: column;
 width: 100%;
 }
 .wrapper{
-  width: 100%;
+  width: 50%;
   justify-content: center;
   padding-right: 2%;
   }
@@ -290,7 +308,7 @@ width: 100%;
 @media screen and (max-width: 700px) {
 
   .wrapper{
-    width: 65%;
+    width: 55%;
     justify-content: center;
     padding-right: 2%;
     }
