--- a/css/contacts.css
+++ b/css/contacts.css
@@ -404,6 +404,13 @@ width: 42vw;
         margin-top: -5px;
         padding-top: 1% !important;
     }
+    
+    .main-header__feedback{
+        margin-top: 1.9px !important;
+    }
+    .main-header__contacts{
+        margin-top: -2px !important;
+    }
     .feedback__h3{
         font-size: 9px;
      }
@@ -458,6 +465,18 @@ width: 42vw;
         font-size: 8px;
      }
 }
+@media (max-width: 410px) and (min-width: 360px) {
+    
+    .feedback__h3{
+        font-size: 8px;
+     }
+     .main-header__feedback{
+        margin-top: -5px !important;
+    }
+    .main-header__contacts{
+        margin-top: -10px !important;
+    }
+}
 @media (max-width: 360px) and (min-width: 300px) {
 
     .feedback__h3{
@@ -477,18 +496,32 @@ width: 42vw;
         padding-top: 0%;
         margin-bottom: 50px;
     }
+    .main-header__feedback{
+        margin-top: -3px !important;
+    }
+    .main-header__contacts{
+        margin-top: -8px !important;
+    }
 }
 @media (max-width: 300px) and (min-width: 260px) {
 
     .feedback__h3{
         font-size: 5.5px;
      }
-
+     .main-header__feedback{
+        margin-top: -2px !important;
+    }
 }
 @media (max-width: 310px) and (min-width: 260px) {
 
     #main-header{
         
         margin-top: -58px;
+    }
+    .main-header__feedback{
+        margin-top: -60px !important;
+    }
+    .main-header__contacts{
+        margin-top: -60px !important;
     }
 }
