--- a/css/products.css
+++ b/css/products.css
@@ -341,3 +341,22 @@ width: 100%;
     }
     
 }
+@media (max-width: 410px) and (min-width: 360px) {
+
+  #main-header{
+      margin-top: -7px;
+  }
+
+}
+@media (max-width: 360px) and (min-width: 310px) {
+
+  #main-header{
+      margin-top: -4px;
+  }
+}
+@media (max-width: 310px) and (min-width: 260px) {
+
+  #main-header{
+      margin-top: -5px;
+  }
+}
