--- a/css/products.css
+++ b/css/products.css
@@ -161,9 +161,13 @@ align-items: center;
 display: flex;
 align-self: center;
 margin-bottom: 20px;
+max-height: 339px;
+max-width: 450px;
 }
 .image_product{
 width: 100%;
+max-height: 339px;
+max-width: 450px;
 display: flex;
 border: 1px solid var(--black);
 box-shadow: 0px 0px 10px 1px lightgrey;
