--- a/css/products.css
+++ b/css/products.css
@@ -160,8 +160,9 @@ justify-content: space-between;
 align-items: center;
 display: flex;
 align-self: center;
-
-max-height: 300px;
+margin-bottom: 42px;
+margin-top: 20px;
+max-height: 200px;
 max-width: 450px;
 }
 .image_product{
