--- a/css/products.css
+++ b/css/products.css
@@ -1,9 +1,10 @@
-.container__products{
+.container__products {
   display: flex;
   flex-direction: column;
   width: 100%;
-  
+
 }
+
 /*.products__block{
   display: grid;
   width: 100%;
@@ -97,269 +98,467 @@ width: 200px;
   border-bottom-right-radius: 10px;
 }
 */
-.products__block{
-display: flex;
-flex-direction: column;
-padding-left: 6%;
-padding-right: 6%;
-margin-top: 2%;
-margin-bottom: 5%;
-height: 100%;
-}
-.item{
-
-width: 100%;
-background-position: center;
-background-size: 100%;
-background-repeat: no-repeat;
-margin-left: 2%;
-}
-.link__product{
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-text-transform: uppercase;
-font-family: 'Oswald', sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 20px;
-width: 100px;
-height: 70px;
-background: rgba(0, 0, 0, 0.5);
-border-radius: 10px;
-color: white;
-}
-
-.constructor{
-width: 200px;
-}
-.item__product2{
-background-image: url(../img/pisochni\ nabory.png);
-}
-
-.block__article_1, .block__article_2{
-display: flex;
-width: 100%;
-}
-.block__article_1{
-display: flex;
-width: 100%;
-margin-bottom: 2%;
-}
-.link2{
+.products__block {
   display: flex;
+  flex-direction: column;
+  padding-left: 6%;
+  padding-right: 6%;
+  margin-top: 2%;
+  margin-bottom: 5%;
+  height: 100%;
+}
+
+.item {
+
+  width: 100%;
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  margin-left: 2%;
+}
+
+.link__product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  width: 100px;
+  height: 70px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  color: white;
+}
+
+.constructor {
+  width: 200px;
+}
+
+.item__product2 {
+  background-image: url(../img/pisochni\ nabory.png);
+}
+
+.block__article_1,
+.block__article_2 {
+  display: flex;
+  width: 100%;
+}
+
+.block__article_1 {
+  display: flex;
+  width: 100%;
+  margin-bottom: 2%;
+}
+
+.link2 {
+  display: flex;
+
+}
+
+.wrapper {
+  width: 50%;
+  padding-right: 2%;
+  padding-left: 2%;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  align-self: center;
+  margin-bottom: 20px;
+
+}
+
+.image_product {
+  width: 100%;
+
+
+  display: flex;
+  border: 1px solid var(--black);
+  box-shadow: 0px 0px 10px 1px lightgrey;
+}
+
+.column {
+  display: flex;
+}
+
+.button {
+  display: flex;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  padding: 12px 25px;
+  font-size: 16px;
+  text-decoration: none;
+  background-color: #505050;
+  color: white;
+  transition: 0.25s ease;
+}
+
+.button:hover {
+  background-color: #323232;
+}
+
+table,
+th,
+td {
+
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  border: 2px solid black;
+  border-collapse: collapse;
+  width: 120px;
+}
+
+table {
+  width: 100%;
+}
+
+.list_products {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2%;
+}
+
+.hr__product {
+  width: 80%;
+  display: flex;
+  align-self: center;
+}
+
+.hr_block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 2%;
+}
+
+.product_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 2%;
+}
+
+.h2_product {
+  display: flex;
+  font-size: 20pt;
+  align-self: center;
+  justify-content: center;
+  padding-top: 1%;
+}
+
+.products_none {
+  display: none;
+}
+
+.cross {
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+  background: grey;
+}
+
+#close {
+  float: right;
+  display: inline-block;
+  padding: 2px 5px;
+  background: #ccc;
+}
+
+#close:hover {
+  float: right;
+  display: inline-block;
+  padding: 2px 5px;
+  background: #ccc;
+  color: #fff;
+}
+
+
+#myImg {
+  width: 100%;
+
+
+  display: flex;
+  border: 1px solid var(--black);
+  box-shadow: 0px 0px 10px 1px lightgrey;
+}
+
+#myImg,
+.close {
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -o-transition: .3s;
+}
+
+#myImg:hover {
+  opacity: .7
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+#caption,
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 100%;
   
 }
 
-.wrapper{
-width: 50%;
-padding-right: 2%;
-padding-left: 2%;
-justify-content: space-between;
-align-items: center;
-display: flex;
-align-self: center;
-margin-bottom: 20px;
+#caption {
+  text-align: center;
+  color: #ccc;
 
-}
-.image_product{
-width: 100%;
-
-
-display: flex;
-border: 1px solid var(--black);
-box-shadow: 0px 0px 10px 1px lightgrey;
-}
-.column{
-display: flex;
+  height: 150px
 }
 
-.button{
-display: flex;
-width: 30%;
-justify-content: center;
-align-items: center;
-margin-top: 35px;
-padding: 12px 25px;
-font-size: 16px;
-text-decoration: none;
-background-color: #505050;
-color: white;
-transition: 0.25s ease;
+#caption,
+.modal-content {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: .6s;
+  animation-name: zoom;
+  animation-duration: .6s
 }
 
-.button:hover{
-background-color: #323232;
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0)
+  }
+
+  to {
+    -webkit-transform: scale(1)
+  }
 }
 
-table, th, td {
+@-moz-keyframes zoom {
+  from {
+    -moz-transform: scale(0)
+  }
 
-padding: 10px;
-font-size: 20px;
-text-align: center;
-border: 2px solid black;
-border-collapse: collapse;
-width: 120px;
+  to {
+    -moz-transform: scale(1)
+  }
 }
-table{
-width: 100%;
+
+@-o-keyframes zoom {
+  from {
+    -o-transform: scale(0)
+  }
+
+  to {
+    -o-transform: scale(1)
+  }
 }
-.list_products{
-display: flex;
-width: 100%;
-justify-content: center;
-align-items: center;
-padding-top: 2%;
+
+@-ms-keyframes zoom {
+  from {
+    -ms-transform: scale(0)
+  }
+
+  to {
+    -ms-transform: scale(1)
+  }
 }
-.hr__product{
-width: 80%;
-display: flex;
-align-self: center;
+
+@keyframes zoom {
+  from {
+    transform: scale(0)
+  }
+
+  to {
+    transform: scale(1)
+  }
 }
-.hr_block{
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100%;
-padding-top: 2%;
+
+.close {
+  display: inline;
+  float: right;
+  margin-top: 15px;
+  margin-right: 20px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: 300
 }
-.product_item{
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-padding-top: 2%;
+
+.close:focus,
+.close:hover {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer
 }
-.h2_product{
-display: flex;
-font-size: 20pt;
-align-self: center;
-justify-content: center;
-padding-top: 1%;
+
+@media only screen and (max-width:700px) {
+  .modal-content {
+    width: 100%
+  }
 }
-.products_none{
-  display: none;
-}
+
 /* optional */
 
 .uk-slideshow [class*=uk-position-bottom] {
-    position: relative!important;
+  position: relative !important;
 }
+
 @media (max-width: 1100px) and (min-width: 1000px) {
-.wrapper{
-  width: 40%;
+  .wrapper {
+    width: 40%;
+  }
 }
-}
+
 @media (max-width: 1000px) and (min-width: 900px) {
-  .wrapper{
+  .wrapper {
     width: 40%;
   }
-  
-}
-@media (max-width: 900px) and (min-width: 800px) {
-  .wrapper{
-    width: 40%;
-  }
-  
-}
-@media (max-width: 1000px) and (min-width: 800px) {
-  .tx_cn{
-      font-size: 14px;
-  }
-  .contacts__not-bold{
-      font-size: 13px;
-  }
-  .conditions > p{
-      font-size: 12.5px;
-  }
-  
 
 }
+
+@media (max-width: 900px) and (min-width: 800px) {
+  .wrapper {
+    width: 40%;
+  }
+
+}
+
+@media (max-width: 1000px) and (min-width: 800px) {
+  .tx_cn {
+    font-size: 14px;
+  }
+
+  .contacts__not-bold {
+    font-size: 13px;
+  }
+
+  .conditions>p {
+    font-size: 12.5px;
+  }
+
+
+}
+
 @media screen and (max-width: 800px) {
-.products__block{
+  .products__block {
     flex-direction: column;
     display: flex;
-}
-.item{
+  }
+
+  .item {
 
 
-  width: 100%;
+    width: 100%;
 
-}
-.item > a{
-width: 100%;
-height: 100%;
-}
-.image_product{
-width: 100%;
-}
-.list_products{
-display: flex;
-flex-direction: column;
-}
-.button{
-width: 100%;
-}
-.wrapper{
-  width: 60%;
- 
-  padding-right: 2%;
+  }
+
+  .item>a {
+    width: 100%;
+    height: 100%;
+  }
+
+  .image_product {
+    width: 100%;
+  }
+
+  .list_products {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  .wrapper {
+    width: 60%;
+
+    padding-right: 2%;
   }
 
 }
+
 @media screen and (max-width: 700px) {
 
-  .wrapper{
+  .wrapper {
     width: 60%;
     justify-content: center;
     padding-right: 2%;
-    }
-    
   }
+
+}
+
 @media screen and (max-width: 460px) {
-  .wrapper{
+  .wrapper {
     width: 75%;
     justify-content: center;
     padding-right: 0%;
-    }
-    .products__block{
-      display: flex;
-      flex-direction: column;
-    }
-    .products_none{
-      display: flex;
-    }
-    .products_none_mobile{
-      display: none;
-    }
-    #main-header{
-      margin-top: -10px;
-    }
-    .block__article_2, .block__article_3, .block__article_1, .block__article_4{
-      margin-bottom: 20px;
-    }
-    .left_side_product{
-      margin-right: 10px;
-    }
-    
+  }
+
+  .products__block {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .products_none {
+    display: flex;
+  }
+
+  .products_none_mobile {
+    display: none;
+  }
+
+  #main-header {
+    margin-top: -10px;
+  }
+
+  .block__article_2,
+  .block__article_3,
+  .block__article_1,
+  .block__article_4 {
+    margin-bottom: 20px;
+  }
+
+  .left_side_product {
+    margin-right: 10px;
+  }
+
 }
+
 @media (max-width: 410px) and (min-width: 360px) {
 
-  #main-header{
-      margin-top: -7px;
+  #main-header {
+    margin-top: -7px;
   }
 
 }
+
 @media (max-width: 360px) and (min-width: 310px) {
 
-  #main-header{
-      margin-top: -4px;
+  #main-header {
+    margin-top: -4px;
   }
 }
+
 @media (max-width: 310px) and (min-width: 260px) {
 
-  #main-header{
-      margin-top: -5px;
+  #main-header {
+    margin-top: -5px;
   }
 }
