--- a/css/products.css
+++ b/css/products.css
@@ -259,27 +259,111 @@ table {
 .products_none {
   display: none;
 }
+.container__img-holder {
+  max-width: 280px;
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 20px;
+  margin-left: 16px;
+  cursor: pointer;
+}
 
+.container .container__img-holder:nth-child(3n+1) {
+  margin-left: 0;
+}
+
+.container__img-holder img {
+  width: 100%;
+  height: 220px;
+  display: block;
+}
+
+
+/* Popup Styling */
+.img-popup {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(255, 255, 255, .5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.img-popup img {
+  max-width: 900px;
+  width: 100%;
+  opacity: 0;
+  transform: translateY(-100px);
+  -webkit-transform: translateY(-100px);
+  -moz-transform: translateY(-100px);
+  -ms-transform: translateY(-100px);
+  -o-transform: translateY(-100px);
+}
+
+.close-btn {
+  width: 35px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.close-btn .bar {
+  height: 4px;
+  background: #333;
+}
+
+.close-btn .bar:nth-child(1) {
+  transform: rotate(45deg);
+}
+
+.close-btn .bar:nth-child(2) {
+  transform: translateY(-4px) rotate(-45deg);
+}
+
+.opened {
+  display: flex;
+}
+
+.opened img {
+  animation: animatepopup 1s ease-in-out .8s;
+  -webkit-animation: animatepopup .3s ease-in-out forwards;
+}
+
+@keyframes animatepopup {
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+  }
+
+}
+
+@media screen and (max-width: 880px) {
+
+  .container .container__img-holder:nth-child(3n+1) {
+    margin-left: 16px;
+  }
+
+}
+/*
 .cross {
   width: 30px;
   height: 30px;
   border-radius: 10px;
   background: grey;
-}
-
-#close {
-  float: right;
-  display: inline-block;
-  padding: 2px 5px;
-  background: #ccc;
-}
-
-#close:hover {
-  float: right;
-  display: inline-block;
-  padding: 2px 5px;
-  background: #ccc;
-  color: #fff;
 }
 
 
@@ -412,7 +496,7 @@ table {
     width: 100%
   }
 }
-
+*/
 /* optional */
 
 .uk-slideshow [class*=uk-position-bottom] {
@@ -487,7 +571,7 @@ table {
   }
 
   .wrapper {
-    width: 50%;
+    width: 60%;
 
     padding-right: 2%;
   }
@@ -497,7 +581,7 @@ table {
 @media screen and (max-width: 700px) {
 
   .wrapper {
-    width: 50%;
+    width: 60%;
     justify-content: center;
     padding-right: 2%;
   }
