--- a/css/products.css
+++ b/css/products.css
@@ -260,11 +260,10 @@ table {
   display: none;
 }
 .container__img-holder {
-  max-width: 280px;
+  
+  
   display: inline-block;
-  vertical-align: top;
-  margin-bottom: 20px;
-  margin-left: 16px;
+
   cursor: pointer;
 }
 
@@ -273,9 +272,9 @@ table {
 }
 
 .container__img-holder img {
-  width: 100%;
-  height: 220px;
   display: block;
+  max-width: 450px;
+  min-height: 100%;
 }
 
 
@@ -294,7 +293,7 @@ table {
 }
 
 .img-popup img {
-  max-width: 900px;
+  max-width: 1000px;
   width: 100%;
   opacity: 0;
   transform: translateY(-100px);
@@ -311,7 +310,7 @@ table {
   justify-content: center;
   flex-direction: column;
   position: absolute;
-  top: 20px;
+  top: 100px;
   right: 20px;
   cursor: pointer;
 }
