--- a/css/products.css
+++ b/css/products.css
@@ -639,9 +639,24 @@ table {
   }
 }
 
+@media (max-width: 375px) and (min-width: 310px) {
+
+  .product-info{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
 @media (max-width: 310px) and (min-width: 260px) {
 
   #main-header {
     margin-top: -5px;
+  }
+  .product-info{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  table, th, td{
+    font-size: 15px;
   }
 }
