--- a/css/products.css
+++ b/css/products.css
@@ -285,7 +285,7 @@ table {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(255, 255, 255, .5);
+  background: rgba(255, 255, 255, 100%);
   display: flex;
   justify-content: center;
   align-items: center;
