--- a/css/contacts.css
+++ b/css/contacts.css
@@ -403,17 +403,7 @@ width: 42vw;
     .head{
         margin-top: 55px;
     }
-    #main-header{
-        margin-top: -5px;
-        padding-top: 1% !important;
-    }
-    
-    .main-header__feedback{
-        margin-top: 0.4px !important;
-    }
-    .main-header__contacts{
-        margin-top: -2px !important;
-    }
+
     .feedback__h3{
         font-size: 9px;
      }
@@ -473,12 +463,7 @@ width: 42vw;
     .feedback__h3{
         font-size: 8px;
      }
-     .main-header__feedback{
-        margin-top: -5px !important;
-    }
-    .main-header__contacts{
-        margin-top: -10px !important;
-    }
+
 }
 @media (max-width: 360px) and (min-width: 300px) {
 
@@ -495,36 +480,113 @@ width: 42vw;
         margin-left: 2vh;
 
     }
-    #main-header{
-        padding-top: 0%;
-        margin-bottom: 50px;
-    }
-    .main-header__feedback{
-        margin-top: -3px !important;
-    }
-    .main-header__contacts{
-        margin-top: -8px !important;
-    }
+
 }
 @media (max-width: 300px) and (min-width: 260px) {
 
     .feedback__h3{
         font-size: 5.5px;
      }
-     .main-header__feedback{
-        margin-top: -2px !important;
     }
-}
 @media (max-width: 310px) and (min-width: 260px) {
 
     #main-header{
         
         margin-top: -58px;
     }
-    .main-header__feedback{
-        margin-top: -60px !important;
+
+}
+@media screen and (max-width: 460px) {
+    .about_us__container{
+        flex-direction: column;
     }
-    .main-header__contacts{
-        margin-top: -60px !important;
+    .head{
+        margin-top: 55px;
+    }
+
+    .indent{
+        font-size: 14px;
+    }
+
+    .descriprion__name{
+        font-size: 20px;
+    }
+    .description__about_us{
+        line-height: 3vh;
+        
+    }
+    .about_us_image {
+        width: 82vw;
+    }
+
+
+    .image_block1__about{
+        display: flex;
+        width: 100%;
+    }
+    
+  }
+  @media (max-width: 410px) and (min-width: 360px) {
+    .indent{
+        font-size: 14px;
+    }
+
+    .descriprion__name{
+        font-size: 12px;
+    }
+    .description__about_us{
+        line-height: 2vh;
+        
+    }
+  }
+  @media (max-width: 310px) and (min-width: 260px) {
+    .indent{
+        font-size: 9.5px;
+    }
+
+    .descriprion__name{
+        font-size: 12px;
+    }
+    .description__about_us{
+        line-height: 2vh;
+        
+    }
+    #main-header{
+        margin-top: 5px;
     }
 }
+  @media (max-width: 360px) and (min-width: 310px) {
+    .indent{
+        font-size: 12px;
+    }
+
+    .descriprion__name{
+        font-size: 12px;
+    }
+    .description__about_us{
+        line-height: 2vh;
+        
+    }
+    #main-header{
+        margin-top: 1px;
+    }
+  }
+
+@media (max-width: 310px) and (min-width: 260px) {
+
+    #main-header{
+        
+        margin-top: -58px;
+    }
+}
+@media screen and (max-width: 700px) {
+    .none_mobile{
+        display: none;
+    }
+    .none_dekstop{
+        display: flex;
+    }
+    .about_us__container{
+        flex-direction: column;
+    }
+  }
