--- a/css/products.css
+++ b/css/products.css
@@ -377,9 +377,7 @@ table {
     display: none;
   }
 
-  #main-header {
-    margin-top: -10px;
-  }
+
 
   .block__article_2,
   .block__article_3,
@@ -394,20 +392,6 @@ table {
 
 }
 
-@media (max-width: 410px) and (min-width: 360px) {
-
-  #main-header {
-    margin-top: -7px;
-  }
-
-}
-
-@media (max-width: 360px) and (min-width: 310px) {
-
-  #main-header {
-    margin-top: -4px;
-  }
-}
 
 @media (max-width: 375px) and (min-width: 310px) {
 
@@ -419,14 +403,70 @@ table {
 
 @media (max-width: 310px) and (min-width: 260px) {
 
-  #main-header {
-    margin-top: -5px;
-  }
+
   .product-info{
     padding-left: 5%;
     padding-right: 5%;
   }
   table, th, td{
     font-size: 15px;
+  }
+}
+@media screen and (max-width: 460px) {
+  .about_us__container{
+      flex-direction: column;
+  }
+  .head{
+      margin-top: 55px;
+  }
+  #main-header{
+      margin-top: -5px;
+  }
+  .indent{
+      font-size: 14px;
+  }
+
+  .descriprion__name{
+      font-size: 20px;
+  }
+  .description__about_us{
+      line-height: 3vh;
+      
+  }
+  .about_us_image {
+      width: 82vw;
+  }
+
+
+  .image_block1__about{
+      display: flex;
+      width: 100%;
+  }
+  
+}
+@media (max-width: 410px) and (min-width: 360px) {
+
+  #main-header{
+      margin-top: -1px;
+  }
+
+}
+@media (max-width: 310px) and (min-width: 260px) {
+
+  #main-header{
+      margin-top: 5px;
+  }
+}
+@media (max-width: 360px) and (min-width: 310px) {
+  #main-header{
+      margin-top: 1px;
+  }
+}
+
+@media (max-width: 310px) and (min-width: 260px) {
+
+  #main-header{
+      
+      margin-top: -1px;
   }
 }
