--- a/css/contacts.css
+++ b/css/contacts.css
@@ -209,6 +209,12 @@ form>* {
     display: flex;
     z-index: 2;
     color: white;
+    background-color: var(--primary);
+    border: 1px solid var(--primary);
+    margin-top: 10px;
+    width: 60%;
+    padding: 15px;
+    font-size: 20px;
 }
 
 .send::after {
@@ -450,6 +456,10 @@ width: 42vw;
     }
     .contacts__not-bold{
         font-size: 15px;
+    }
+    form {
+        margin-top: 50px;
+        
     }
   }
   @media (max-width: 430px) and (min-width: 360px) {
